--- a/cottage/index.html
+++ b/cottage/index.html
@@ -102,7 +102,8 @@
 								   <ul class="col m12 tp6 t5 d4 c3 site-menu__menu-col sidmtop">
 									   
 									   <li><span class="caption headingf6 custom_num_lab">06</span><a href="/cottage/index.html" class="headingr3">The Cottage</a></li> 
-									   <li><span class="caption headingf6 custom_num_lab">07</span><a href="/gathering/index.html" class="headingr3">Film Shoots & Receptions</a></li>   
+									   <li><span class="caption headingf6 custom_num_lab">07</span><a href="/gathering/index.html" class="headingr3">Film Shoots & Receptions</a></li>  
+									   <li><span class="caption headingf6 custom_num_lab">08</span><a href="http://community.llandudnoshack.co.za/" class="headingr3">Community</a></li> 
 								   </ul>
 							 </div>
 						   </nav>		
@@ -147,7 +148,7 @@
           <h1 class="headingr1 white_text" data-aos="fade-up">The Cottage</h1>
 		  <p class="white_text figtree">Chauffeur to the door by Michelle. The tiny house 
 			has everything you need for an amazing long weekend</p>
-          <div class="pt-60"><a href="https://calendar.app.google/nmTeJqQ4sEgXN5qU6" class="tr_white_button custom_float_left">inquire about the cottage</a></div>
+          <div class="pt-60"><a href="https://calendar.app.google/yt8iEweUZz85X5796" class="tr_white_button custom_float_left">inquire about the cottage</a></div>
         </div>
       </div>
 	 </section> 
@@ -234,8 +235,8 @@
 					<img src="../images/long-weekend.png" data-sl="1" class="custom_side_image pbm32"/>
 				</div>
 				<div class="col-12 col-md-6  pl8pr spa-content">
-					<div class="headingr5 pb16 clrgreen">Stay at The Cottage</div>
-					<div class="headingr2 pb32 clrgreen">Stay the long weekend</div>
+					<div class="headingr5 pb16 clrgreen">entire_week_at_the_cottage</div>
+					<div class="headingr2 pb32 clrgreen">Stay an entire week</div>
 					<div class="paraReg clrgreen custom_left">The space sleeps a small family, and is exposed to the elements of nature.<br><br><b>Note:</b> Ensure you have reserved the date in the google calendar, which will give you all the information needed for a unique stay at the tiny cabin.</div>					
 					<div class="pt-60 custom_left">
 						<a href="#" class="white_button custom_float_left payment_url" data-id="entire_week_at_the_cottage">Stay 7 days at cottage</a>
