--- a/the-shack-manual/index.html
+++ b/the-shack-manual/index.html
@@ -97,7 +97,8 @@
 								   <ul class="col m12 tp6 t5 d4 c3 site-menu__menu-col sidmtop">
 									   
 									   <li><span class="caption headingf6 custom_num_lab">06</span><a href="/cottage/index.html" class="headingr3">The Cottage</a></li> 
-									   <li><span class="caption headingf6 custom_num_lab">07</span><a href="/gathering/index.html" class="headingr3">Film Shoots & Receptions</a></li>   
+									   <li><span class="caption headingf6 custom_num_lab">07</span><a href="/gathering/index.html" class="headingr3">Film Shoots & Receptions</a></li>  
+									   <li><span class="caption headingf6 custom_num_lab">08</span><a href="http://community.llandudnoshack.co.za/" class="headingr3">Community</a></li> 
 								   </ul>
 							 </div>
 						   </nav>				
