--- a/index.html
+++ b/index.html
@@ -103,6 +103,7 @@
 									   
 									   <li><span class="caption headingf6 custom_num_lab">06</span><a href="/cottage/index.html" class="headingr3">The Cottage</a></li> 
 									   <li><span class="caption headingf6 custom_num_lab">07</span><a href="/gathering/index.html" class="headingr3">Film Shoots & Receptions</a></li>   
+									   <li><span class="caption headingf6 custom_num_lab">08</span><a href="http://community.llandudnoshack.co.za/" class="headingr3">Community</a></li>   
 								   </ul>
 							 </div>
 						   </nav>			
@@ -144,9 +145,9 @@
        <div class="half d-md-flex d-block">
         <div class="text fullwi" data-aos="fade">
 
-          <h1 class="headingr1 white_text" data-aos="fade-up">Stay a long weekend</h1>
-		  <p class="white_text figtree">CHECK AND RESERVE A HOLIDAY IN LLANDUNDNO BEACH COTTEGE</p>
-          <div class="pt-60"><a href="https://calendar.google.com/calendar/u/0/appointments/schedules/AcZssZ1-Y4p72WFjMgp925ZrXcxS0buu-lx5fGnBYcoaGkJUprhKLXHwnTe61HEDQKCVtC25DVw9QUEW" class="tr_white_button custom_float_left">🗓️ Availabity Calender</a></div>
+          <h1 class="headingr1 white_text" data-aos="fade-up">Welcome to <br>The Surf Shacks</h1>
+		  <p class="white_text figtree">Check Availability and reserve The SHACKs in llandudno SHort Term  HOLIDAY Cabins</p>
+          <div class="pt-60"><a href="https://calendar.google.com/calendar/u/0/appointments/schedules/AcZssZ1-Y4p72WFjMgp925ZrXcxS0buu-lx5fGnBYcoaGkJUprhKLXHwnTe61HEDQKCVtC25DVw9QUEW" class="tr_white_button custom_float_left">🏄‍♂️ Become a local</a></div>
         </div>
       </div>
 	 </section> 
@@ -187,12 +188,18 @@
 		<div class="container overflow-hidden">
 			<div class="row justify-content-center d-md-flex d-block">
 				<div class="col-12 col-md-6 pl8pr custom_images">
-					<img src="images/llandudnoShack_3.gif" data-sl="1" class="custom_click_image image_show"/>
+					<video width="100%" height="440" controls>
+						<source src="images/4.webmhd.webm" type="video/mp4">
+						<source src="images/4.webmhd.webm" type="video/ogg">
+						Your browser does not support the video tag.
+						</video>
+					
+					<!--img src="images/llandudnoShack_3.gif" data-sl="1" class="custom_click_image image_show"/>
 					<img src="images/llandudnoShack_3.gif" data-sl="2" class="custom_click_image"/>
 					<img src="images/llandudnoShack_3.gif" data-sl="3" class="custom_click_image"/>
 					<img src="images/llandudnoShack_3.gif" data-sl="4" class="custom_click_image"/>
 					<img src="images/llandudnoShack_3.gif" data-sl="5" class="custom_click_image"/>
-					<img src="images/llandudnoShack_3.gif" data-sl="6" class="custom_click_image"/>
+					<img src="images/llandudnoShack_3.gif" data-sl="6" class="custom_click_image"/-->
 				</div>
 				<div class="col-12 col-md-6 pl8pr gallery-content">
 					<div class="headingr5 pb16 clrgreen">Need to know</div>
@@ -348,12 +355,12 @@
 					</div>	
 				</div>
 				<div class="col-12 col-md-6  pl42 custom_event_content text-center">
-					<img src="images/image_wip.png"/>
+					<img src="images/Long-term.png"/>
 					<div class="pt48">
 						<div class="headingr6 pb16 clrgreen"></div>
-						<div class="headingr3 pb32 clrgreen">Coming (🚧 WIP) - Glamping</div>
-						<div class="paraSm pb32 clrgreen">Bedding and towels provided. Immerse yourself into sounds of the ocean in a large canvas tent. Outside Bathroom</div>
-						<a href="#" class="small_button payment_url" data-id="camping_long_weekend">🏕️Camping for 4 people over a long weekend</a>
+						<div class="headingr3 pb32 clrgreen">Long term (Out of season)</div>
+						<div class="paraSm pb32 clrgreen">Internet and weekly cleaner </div>
+						<a href="#" class="small_button payment_url" data-id="outSeason">Month by month payment option</a>
 					</div>					
 				</div>
 			</div>	
